--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
         [routerLinkActiveOptions]="{ exact: true }"
         class="text-slate-600 hover:text-primary transition-colors"
       >
-        Home
+        Home page
       </a>
       <a
         routerLink="/features"
